Update start.sh
posix compliannt. no config file. no launch flags. better use of api.